; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_acelp_pitch_delay.c_ff_acelp_decode_8bit_to_1st_delay3.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_acelp_pitch_delay.c_ff_acelp_decode_8bit_to_1st_delay3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_acelp_decode_8bit_to_1st_delay3(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = add nsw i32 %3, 58
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp sgt i32 %5, 254
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 3, %8
  %10 = sub nsw i32 %9, 510
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
